設定ファイルの概要を更新し、章タイトルを明確にしました。また、状態管理に関するセクションを強化し、副作用の管理についての新しい考察を追加しました。さらに、非同期処理におけるイミュータブルの重要性を説明し、共通エラー処理のセクションを追加しました。

--- a/books/19280cf9bec318/config.yaml
+++ b/books/19280cf9bec318/config.yaml
@@ -1,6 +1,6 @@
 title: "宣言的UI設計の本質──Flutter & Riverpodで学ぶ現代的状態管理"
 summary: |
-  FlutterやRiverpodの表面的な使い方を超えて、宣言的UI・状態管理の本質や設計理論を深く掘り下げます。
+  Riverpod 3が登場するいま、FlutterやRiverpodの表面的な使い方を超えて、宣言的UI・状態管理の本質や設計理論を深く掘り下げます。
   本書は、現代的なUI設計や状態管理の根本原則を、Flutter/Riverpodを題材にしつつも、他のフレームワークや一般的なソフトウェア設計にも応用できる普遍的な視点から解説しています。
   「なぜそう設計するのか」「どこまで粒度を分割すべきか」「責務の分離とは何か」といった設計上の本質的な問いに答え、実践的なコード例とともに理論の追求と実践を目指します。
   ※ 本書はあとがき以外を無料で公開しています。パブリックレポジトリにあるので有料であることに強い意味はないですが、何か本書で洞察があれば、支援いただけるとうれしいです。
